--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ barcodeScanning = "18.3.0"
 cameraCamera2 = "1.3.3"
 hiltAndroidCompiler = "2.51.1"
 hiltNavigationFragment = "1.2.0"
+itext7Core = "7.1.15"
 kotlin = "1.9.24"
 coreKtx = "1.13.1"
 junit = "4.14-SNAPSHOT"
@@ -45,6 +46,7 @@ androidx-hilt-navigation-fragment = { module = "androidx.hilt:hilt-navigation-fr
 androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "hiltNavigationFragment" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-startup-runtime = { module = "androidx.startup:startup-runtime", version.ref = "startupRuntime" }
+itext7-core = { module = "com.itextpdf:itext7-core", version.ref = "itext7Core" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workVersion" }
 androidx-room-runtime = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
