--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.4.0"
 barcodeScanning = "18.3.0"
 cameraCamera2 = "1.3.3"
+escposThermalprinterAndroid = "3.3.0"
 hiltAndroidCompiler = "2.51.1"
 hiltNavigationFragment = "1.2.0"
 itext7Core = "7.1.15"
@@ -49,6 +50,7 @@ androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.r
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomRuntime" }
 androidx-startup-runtime = { module = "androidx.startup:startup-runtime", version.ref = "startupRuntime" }
+escpos-thermalprinter-android = { module = "com.github.DantSu:ESCPOS-ThermalPrinter-Android", version.ref = "escposThermalprinterAndroid" }
 itext7-core = { module = "com.itextpdf:itext7-core", version.ref = "itext7Core" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workVersion" }
